--- a/client/app/styles/styles.scss
+++ b/client/app/styles/styles.scss
@@ -16,7 +16,7 @@ body{
   overflow: hidden;
 }
 .background.region-map__map{
-  height:300px;
+  height:350px;
 }
 .Ukraine_map .region-map__region{
   transition: fill 0.3s ease-in-out;
@@ -31,7 +31,7 @@ body{
   max-width: 800px;
   width: 100%;
   height:40%;
-  margin-top: 40px;
+  margin-top: 20px;
   padding: 20px;
   z-index: 3;
 }
@@ -90,9 +90,9 @@ body{
   color: #fff;
   background: linear-gradient(-35deg, #f4dece, #cac8d5, #e1bcb3, #f6ead1);
   background-size: 400% 400%;
-  -webkit-animation: Gradient 15s ease infinite;
-  -moz-animation: Gradient 15s ease infinite;
-  animation: Gradient 10s ease infinite;
+  -webkit-animation: Gradient 3s ease infinite;
+  -moz-animation: Gradient 3s ease infinite;
+  animation: Gradient 3s ease infinite;
   display: flex;
   flex-flow: column;
 }
@@ -104,12 +104,19 @@ body{
 .layer2-top, .layer2-button{
   display: inline-block;
 }
+.layer2-button{
+  position: relative;
+  clear: left; 
+  background-color: #7a9c94;
+  width: 100%;
+  height: calc(50% + 0.5px);
+  }
 .layer2-top{
   background-size: contain;
   background-repeat: no-repeat;
   width: 100%;
-  height: 50%;
-  } 
+  height: calc(50% - 0.5px);
+  }
 
 @-webkit-keyframes Gradient {
   0% {
@@ -192,10 +199,6 @@ body{
         transform: rotateY(-180deg);
     }
 }
-.layer2-button .hover-fold .bottom {
-  width: 50%;
-  height: 100%;
-}
 
 .card {
     font-family: 'Open Sans';
@@ -215,14 +218,14 @@ body{
 
 .answers .send {
     position: absolute;
-    top: -28px;
+    top: -15px;
     right: 24px;
 }
 .send {
     
     line-height: 1;
     width: 90px;
-    height: 50px;
+    height: 35px;
     cursor: pointer;
     -webkit-transition: all .4s;
     transition: all .4s;
@@ -251,6 +254,11 @@ body{
 
 .fa-img{
   position: absolute;
+  padding-top: 6px;
+}
+.fa-img p{
+  font-family: "Comfortaa";
+  margin-top: 5px;
 }
 .answers > div {
     position: relative;
@@ -279,6 +287,7 @@ body{
       text-align: center;
     }
 }
+
 .answers {
     position: relative;
     padding: 15px;
@@ -346,3 +355,155 @@ form {
   min-height: 100%;
 }
 
+
+.hover-fold {
+  background: #c6bab5;
+  height: 100%;
+  margin: 0;
+  -moz-perspective: 1500;
+  -webkit-perspective: 1500;
+  perspective: 1500;
+  position: relative;
+  width: 100%;
+}
+.hover-fold h2 {
+  border-bottom: 1px solid #333;
+  margin: 0;
+  padding: 65px 0 2px;
+}
+.hover-fold .top {
+  height: 50%;
+  -moz-transition: all 0.5s ease-out;
+  -o-transition: all 0.5s ease-out;
+  -webkit-transition: all 0.5s ease-out;
+  transition: all 0.5s ease-out;
+  -moz-transform: rotateX(0deg);
+  -ms-transform: rotateX(0deg);
+  -webkit-transform: rotateX(0deg);
+  transform: rotateX(0deg);
+  -moz-transform-origin: 0 100%;
+  -ms-transform-origin: 0 100%;
+  -webkit-transform-origin: 0 100%;
+  transform-origin: 0 100%;
+  -moz-transform-style: preserve-3d;
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+  position: absolute;
+  top: 0px;
+  width: 100%;
+  z-index: 10;
+}
+.top{
+  font-family: "Open Sans", sans-serif;
+  font-size: 16px;
+}
+.hover-fold .top .face {
+  -moz-backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  position: absolute;
+}
+.hover-fold{
+  position: relative;
+}
+.hide_top{
+  height: 50%;
+  justify-content: center;
+  display: flex;
+  flex-flow: column;
+}
+.hover-fold:hover .top {
+  -moz-transform: rotateX(-180deg);
+  -ms-transform: rotateX(-180deg);
+  -webkit-transform: rotateX(-180deg);
+  transform: rotateX(-180deg);
+}
+.hover-fold .front {
+  background-color: #7a9c94;
+  height: 100%;
+  /*has to be 100% of .top */
+  width: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.hover-fold .back {
+  background: #c6bab5;
+  height: 100%;
+  padding: 0 40px;
+  -moz-transform: rotateX(180deg);
+  -ms-transform: rotateX(180deg);
+  -webkit-transform: rotateX(180deg);
+  transform: rotateX(180deg);
+  width: 100%;
+}
+.hover-fold .back p {
+  margin: 0;
+}
+.hover-fold .bottom {
+  background-color: #7a9c94;
+  height: 50%;
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  z-index: 0;
+  background-size: cover;
+}
+.layer2-top-content {
+  position: absolute;
+  top:0;
+  background: rgba(0, 0, 0, 0.2);
+  width: 100%;
+  height: 100%;
+  left: 0;
+}
+.layer2-top-content h1{
+  margin-top: 100px;
+  color: white;
+}
+.layer2-top-content p{
+  color: white;
+}
+.back{
+    display: flex;
+    flex-flow: row;
+    text-align: center;
+    justify-content: center;
+}
+.bottom-img-left{
+  background: url(../../public/assets/img/me.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 30%;
+  height: 100%;
+
+}
+.bottom p{
+  color: white;
+  font-size: 22px;
+}
+.bottom-img-right{
+  background: url(../../public/assets/img/me.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 30%;
+  height: 100%;
+  margin-left: 20px;
+}
+.hide_top-left{
+  height: 100%;
+  margin-top: 5px;
+}
+.hide_top-right{
+  margin-top: 5px;
+  height: 100%;
+  margin-left: 55px;
+}
+.hide_top-top-top{
+  display: flex;
+  flex-flow: row;
+  justify-content: center;
+}
+.head span{
+  color: white;
+}
