--- a/client/app/styles/styles.scss
+++ b/client/app/styles/styles.scss
@@ -870,6 +870,9 @@ nav li:hover > .submenu {
     position: relative;
     outline: none;
     font-size: 14px;
+    option{
+    font-size: 14px;
+    }
 }
 .custom-select{
     display: flex;
@@ -879,6 +882,9 @@ nav li:hover > .submenu {
 .select-wrapper{
   margin-left: 10px;
   width: 150px;
+  select{
+  font-family: Open Sans;
+  }
 }
 .custom-select p{
   font-family: "Open Sans", sans-serif;
@@ -897,6 +903,9 @@ nav li:hover > .submenu {
     position: absolute;
     top: 18px;
     margin-left: 30px;
+    a{
+    color: #fff;
+    }
 }
 .send {
     
