angelina new page3

--- a/client/app/styles/styles.scss
+++ b/client/app/styles/styles.scss
@@ -1001,6 +1001,7 @@ tr td{
   font-family: "Open Sans", sans-serif;
   font-size: 10px;
   height: auto;
+  text-align: left;
   border-bottom: 1px solid #bdbebd;
 }
 
