--- a/client/app/styles/styles.scss
+++ b/client/app/styles/styles.scss
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 
 @import 'vendor/normalize';
+@import 'vendor/c3';
 @import 'preloader';
 
 
@@ -8,6 +9,22 @@
 
 @import url(https://fonts.googleapis.com/css?family=Didact+Gothic|Comfortaa:400,700&subset=latin,cyrillic);
 @import url(https://fonts.googleapis.com/css?family=Open+Sans|Playfair+Display:400,700,400italic,700italic&subset=latin,cyrillic);
+.chart__container{
+  display: block;
+  margin-top: 100px;
+  .block{
+    font-size: 16px;
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    .block-color{
+      border-radius: 50%;
+      margin-right: 20px;
+      height: 20px;
+      width: 20px;
+    }
+  }
+}
 main{
 }
 body{
@@ -857,6 +874,7 @@ nav li:hover > .submenu {
   width: 100%;
   height: 100%;
   color: #fff;
+  min-height: 100vh;
   
 }
 .layer-one-top-parallax h3{
